--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<h1 style="text-align: center;"></h1>>RFID Inventory !!TEST!! Dashboard</h1>
-<p style="text-align: center;"><strong>Welcome to the RFID Inventory Testing Dashboard. </strong></p>
-<p style="text-align: center;">Use the tabs above to view detailed information, or click "WARNING SERVER REBOOT" to update data immediately.</p>
-<p style="text-align: center;">THIS SERVER WILL HAVE NEWEST FEATURES.</p>
+<h1 style="text-align: center;"></h1>>RFID Inventory Dashboard</h1>
+<p style="text-align: center;"><strong>Welcome to the RFID Inventory Dashboard. </strong></p>
+<p style="text-align: center;">Use the tabs above to view detailed information, or click "RFRESH" to update data immediately.</p>
+<p style="text-align: center;">THIS SERVER WILL HAVE MOST STABLE FEATURES.</p>
 <h3 style="padding-left: 240px;"><strong>Scannable Items- </strong></h3>
 <ul>
 <li style="list-style-type: none;">
@@ -19,10 +19,10 @@
 <li style="list-style-type: none;">
 <ul>
 <li>
-<h3><strong>All Linens(except Spandex, Napkins, Runners, and Sashes)</strong></h3>
+<h3><strong>All Linens(except Spandex, Napkins, Runners, and Sashes-HANDCOUNT AND ENTER)</strong></h3>
 </li>
 <li>
-<h3><strong> All Resale</strong></h3>
+<h3><strong> All Resale EXCEPT STERNO AND BAGS</strong></h3>
 </li>
 <li>
 <h3><strong> All AV and Concession</strong></h3>
